[package]
name = "wazip"
version = "0.1.0"
authors = ["nasso <nassomails@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.zip]
version = "0.5"
default-features = false
features = ["deflate"]
