[package]
name = "wazip"
version = "0.1.0"
authors = ["nasso <nassomails@gmail.com>"]
edition = "2018"
description = "A ZIP file manipulation library for JavaScript powered by WASM"
repository = "https://github.com/nasso/wazip"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.zip]
version = "0.5"
default-features = false
features = ["deflate"]

[profile.release]
lto = true
